fix misaligned social-buttons style

--- a/wp-content/themes/wp-nycc/assets/scss/app.scss
+++ b/wp-content/themes/wp-nycc/assets/scss/app.scss
@@ -606,6 +606,9 @@ $widget-item-margin: rem-calc(8);
     @extend .inline-icon;
     margin: 0.2em !important;
   }
+  li + li {
+    margin-top: 0;
+  }
 }
 
 
